# MillionMan

./: .gitignore  Procfile  README.md  m.cmd  manage.py  pyproject.toml  pytest.ini  requirements.txt  spend.py  test_very_simple_views.py
blog/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
blog/management/commands/: create_fake_posts.py
blog/migrations/: 0001_initial.py  0002_alter_post_options.py  0003_tag.py  0004_post_tags.py
blog/templates/blog/: post_detail.html  post_list.html
expenses/: admin.py  forms.py  inher2.py  models.py  serializers.py  tests.py  urls.py  views.py
expenses/management/commands/: create_fake_expenses.py
expenses/migrations/: 0001_initial.py  0002_alter_comment_expense.py  0002_expense_description_alter_expense_date.py  0003_alter_expense_date.py  0003_expense_active.py  0004_alter_category_options.py  0004_category_alter_expense_description_and_more.py  0005_auto_20220411_0709.py  0006_alter_expense_category.py  0007_alter_expense_category.py  0008_comment.py  0009_alter_comment_expense.py
expenses/static/css/: style.css
expenses/templates/: 404.html  base.html  cookie_demo.html
expenses/templates/expenses/: comment_form.html  expense_confirm_delete.html  expense_create.html  expense_detail.html  expense_form.html  expense_list.html
expenses/templates/registration/: login.html
million_man/: asgi.py  base_settings.py  local_settings_template.py  settings.py  urls.py  wsgi.py
