[tool.poetry]
name = "million_man"
version = "0.1.0"
description = ""
authors = ["Udi Oron <udioron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
ipython = "^8.2.0"
pytest = "^7.1.1"
pytest-django = "^4.5.2"
django-extensions = "^3.1.5"
Faker = "^13.3.3"
django-bootstrap5 = "^21.3"
silly = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
